[gd_scene load_steps=8 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]
[ext_resource path="res://grass.tres" type="TileSet" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 24 )

[node name="Room" type="Node2D" groups=["rooms"]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -196609, 0, 196608, -262144, 0, 196609, -131077, 0, 196608, -131076, 0, 327680, -131075, 0, 327680, -131074, 0, 327680, -131073, 0, 131073, -196608, 0, 131072, -196607, 0, 327680, -196606, 0, 327680, -196605, 0, 327680, -196604, 0, 196609, -65541, 0, 65537, -65540, 0, 2, -65539, 0, 2, -65538, 0, 2, -65537, 0, 2, -131072, 0, 2, -131071, 0, 2, -131070, 0, 2, -131069, 0, 2, -131068, 0, 65536, -6, 0, 196608, -5, 0, 131073, -4, 0, 2, -3, 0, 2, -2, 0, 2, -1, 0, 2, -65536, 0, 2, -65535, 0, 2, -65534, 0, 2, -65533, 0, 2, -65532, 0, 131072, -65531, 0, 196609, 65530, 0, 262144, 65531, 0, 1, 65532, 0, 2, 65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 0, 5, 0, 262145, 131067, 0, 65537, 131068, 0, 2, 131069, 0, 2, 131070, 0, 2, 131071, 0, 2, 65536, 0, 2, 65537, 0, 2, 65538, 0, 2, 65539, 0, 2, 65540, 0, 65536, 196603, 0, 262144, 196604, 0, 327681, 196605, 0, 327681, 196606, 0, 327681, 196607, 0, 1, 131072, 0, 0, 131073, 0, 327681, 131074, 0, 327681, 131075, 0, 327681, 131076, 0, 262145, 262143, 0, 262144, 196608, 0, 262145 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( -112, -32 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 32 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -160, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 96 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -96 )
shape = SubResource( 2 )

[node name="Doors" type="Node2D" parent="."]

[node name="Up" type="Area2D" parent="Doors"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Up"]
position = Vector2( 0, -88 )
rotation = -1.57079
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="Doors"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Right"]
position = Vector2( 152, 0 )
shape = SubResource( 3 )

[node name="Down" type="Area2D" parent="Doors"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Down"]
position = Vector2( 0, 88 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="Left" type="Area2D" parent="Doors"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Left"]
position = Vector2( -152, 0 )
rotation = 3.14159
shape = SubResource( 3 )

[node name="Spawns" type="Node2D" parent="."]

[node name="ZERO" type="Position2D" parent="Spawns"]

[node name="UP" type="Position2D" parent="Spawns"]
position = Vector2( 0, -56 )

[node name="RIGHT" type="Position2D" parent="Spawns"]
position = Vector2( 120, 0 )

[node name="DOWN" type="Position2D" parent="Spawns"]
position = Vector2( 0, 56 )

[node name="LEFT" type="Position2D" parent="Spawns"]
position = Vector2( -120, 0 )

[connection signal="ready" from="." to="." method="_on_Room_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Doors/Up" to="." method="_on_Up_body_entered"]
[connection signal="body_exited" from="Doors/Up" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Doors/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Doors/Right" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Doors/Down" to="." method="_on_Down_body_entered"]
[connection signal="body_exited" from="Doors/Down" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Doors/Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Doors/Left" to="." method="_on_body_exited"]
